mengubah page portofolio

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
               <a class="nav-link" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About Me</a>
+              <a class="nav-link" href="#about">Curriculum Vitae</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
+              <a class="nav-link" href="#projects">Portofolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact"">Contact Me</a>
@@ -94,7 +94,7 @@
       <div class="countainer p-5">
         <div class="row text-center ">
           <div class="col mt-3 mb-4 ">
-            <h2>My Projects</h2>
+            <h2>My Portofolio</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -115,7 +115,7 @@
               <div class="card-body">
                 <p class="card-text">Website Dinamis</p>
                 <p class="card-text"> HTML, CSS, php, mysql, framework Css Bootstrap, framework php codeigniter</p>
-                <a href="#" class="btn btn-primary">Download Source Code</a>
+                <a href="https://github.com/erlanferdiandi/erlanferdiandidinamis.github.io.git" class="btn btn-primary">Download Source Code</a>
               </div>
             </div>
           </div>
