--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- my css -->
     <link rel="stylesheet" href="style.css">
-    <title>My Porto | erlan ferdiandi</title>
+    <title>My Portofolio | Erlan Ferdiandi</title>
   </head>
   <body id="home">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Erlan Ferdiandi</a>
+        <a class="navbar-brand" href="#home">Erlan Ferdiandi</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,7 +28,7 @@
               <a class="nav-link" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">Curriculum Vitae</a>
+              <a class="nav-link" href="#about">Tentang Saya</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#projects">Portofolio</a>
@@ -39,7 +42,7 @@
     </nav>
     <!-- akhir navbar -->
     <!-- jumbotron -->
-    <section class="jumbotron text-center ">
+    <section class="jumbotron text-center " data-aos="fade-up" data-aos-duration="3000">
       <img src="img/erlan1.jpg" alt="erlan ferdiandi" width="200"  class="rounded-circle img-thumbnail" >
       <h1 class="display-4">Erlan Ferdiandi</h1>
       <p class="lead">Programmer || Entrepreneur</p>
@@ -48,42 +51,22 @@
 
     <!-- about -->
     <section id="about">
-    <div class="countiner p-5">
+    <div class="countiner p-5"  >
       <div class="row text-center mb-3">
         <div class="col  ">
-          <h2>Curriculum Vitae</h2>
+          <h2>Tentang Saya</h2>
         </div>
       </div>
-      <div class="row justify-content-center fs-5 text-center ">
+      <div class="row justify-content-center fs-5 text-center " data-aos="fade-right" data-aos-duration="1000">
         <div class="col-md-4 mb-3 mt-4">
-          <p><img src="img/fotoa.jpg" width="150" alt="..."></p>
+          <p>Nama saya Erlan Ferdiandi |
+             Saya lahir di bandung tanggal 6 agustus 1992 
+            | Saya tinggal di JL uranium no 5 Buah-Batu Bandung | Email Saya erlanferdiandi2@gmail.com </p>
         </div>
         
-        <div class="col-md-4 mb-3 mt-4">
-          <p><table class="table">
-            <tbody>
-              <tr>
-                <td>Nama</td>
-                <td>:</td>
-                <td>Erlan Ferdiandi</td>
-              </tr>
-              <tr>
-                <td>NIK</td>
-                <td>:</td>
-                <td>3273220608920001</td>
-              </tr>
-              <tr>
-                <td>Jenis Kelamin </td>
-                <td>:</td>
-                <td>Laki-laki</td>
-              </tr>
-              <tr>
-                <td>Alamat</td>
-                <td>:</td>
-                <td>Jl uranium no.5 </td>
-              </tr>
-            </tbody>
-          </table></p>
+        <div class="col-md-4 mb-3 mt-4"  data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
+          <p>Saya lulusan D3 Manajemen Informatika di STMIK AMIK Bandung | SMK Saya Di SMKN 14 Bandung
+           | SMP saya Di SMPN 42 Bandung | SD saya Di SDN Buahbatu 07 Bandung </p>
         </div>
       </div>
     </div>
@@ -99,7 +82,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3 ">
-            <div class="card" >
+            <div class="card" data-aos="zoom-out-up" data-aos-duration="500">
               <img src="img/projects/p1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">Website Statis</p>
@@ -110,7 +93,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" >
+            <div class="card" data-aos="zoom-out-up" data-aos-duration="500" data-aos-delay="100">
               <img src="img/projects/p2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">Website Dinamis</p>
@@ -120,7 +103,25 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" >
+            <div class="card" data-aos="zoom-out-up"  data-aos-duration="500" data-aos-delay="200">
+              <img src="img/projects/3.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Download</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card" data-aos="zoom-out-up"  data-aos-duration="500" data-aos-delay="200">
+              <img src="img/projects/3.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Download</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card" data-aos="zoom-out-up"  data-aos-duration="500" data-aos-delay="200">
               <img src="img/projects/3.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -134,7 +135,7 @@
     <!-- akhir project -->
     <!-- contact -->
     <section id="contact">
-      <div class="container p-5">
+      <div class="container p-5" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="2000">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>Contact Me</h2>
@@ -185,6 +186,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbwkxg_GTxa7BQXjEMAcWbUo3L7Vvtai6dZCdGpiic1UdsUDzGRRsglMswaPfnnctioA/exec'
       const form = document.forms['contact-erlan-foam']
