--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <!-- jumbotron -->
     <section class="jumbotron text-center " data-aos="fade-up" data-aos-duration="3000">
       <img src="img/erlan1.jpg" alt="erlan ferdiandi" width="200"  class="rounded-circle img-thumbnail" >
-      <h1 class="display-4">Erlan Ferdiandi</h1>
-      <p class="lead">Programmer || Entrepreneur</p>
+      <h1 class="display-4" >Erlan Ferdiandi</h1>
+      <p class="lead" >Programmer || Entrepreneur</p>
       </section>
     <!-- akhir jumbotron -->
 
@@ -59,13 +59,13 @@
       </div>
       <div class="row justify-content-center fs-5 text-center " data-aos="fade-right" data-aos-duration="1000">
         <div class="col-md-4 mb-3 mt-4">
-          <p>Nama saya Erlan Ferdiandi |
+          <p class="fst-italic">Nama saya Erlan Ferdiandi |
              Saya lahir di bandung tanggal 6 agustus 1992 
             | Saya tinggal di JL uranium no 5 Buah-Batu Bandung | Email Saya erlanferdiandi2@gmail.com </p>
         </div>
         
         <div class="col-md-4 mb-3 mt-4"  data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
-          <p>Saya lulusan D3 Manajemen Informatika di STMIK AMIK Bandung | SMK Saya Di SMKN 14 Bandung
+          <p class="fst-italic">Saya lulusan D3 Manajemen Informatika di STMIK AMIK Bandung | SMK Saya Di SMKN 14 Bandung
            | SMP saya Di SMPN 42 Bandung | SD saya Di SDN Buahbatu 07 Bandung </p>
         </div>
       </div>
@@ -86,7 +86,7 @@
               <img src="img/projects/p1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">Website Statis</p>
-                <p class="card-text">HTML, CSS, framework Css Bootstrap</p>
+                <p class="card-text">HTML, CSS, framework Css Bootstrap, Animasi AOS</p>
                 <p></p>
                 <a href="https://github.com/erlanferdiandi/erlanferdiandi.github.io" class="btn btn-primary">Download Source Code</a>
               </div>
