--- a/index.html
+++ b/index.html
@@ -15,8 +15,42 @@
     <title>My Portofolio | Erlan Ferdiandi</title>
   </head>
   <body id="home">
+
+    <!-- navbar2 -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top fw-bold">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">Tentang Saya</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">Portofolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact"">Kontak Saya</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">Twitter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact"">Facebook</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- endnavbar2 -->
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#home">Erlan Ferdiandi</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,18 +68,18 @@
               <a class="nav-link" href="#projects">Portofolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact"">Contact Me</a>
+              <a class="nav-link" href="#contact"">Kontak Saya</a>
             </li>
           </ul>
         </div>
       </div>
-    </nav>
+    </nav> -->
     <!-- akhir navbar -->
     <!-- jumbotron -->
     <section class="jumbotron text-center " data-aos="fade-up" data-aos-duration="3000">
       <img src="img/erlan1.jpg" alt="erlan ferdiandi" width="200"  class="rounded-circle img-thumbnail" >
-      <h1 class="display-4" >Erlan Ferdiandi</h1>
-      <p class="lead" >Programmer || Entrepreneur</p>
+      <h1 class="display-4 fst-italic" >Erlan Ferdiandi</h1>
+      <p class="lead fst-normal" >Programmer || Entrepreneur</p>
       </section>
     <!-- akhir jumbotron -->
 
@@ -57,16 +91,30 @@
           <h2>Tentang Saya</h2>
         </div>
       </div>
-      <div class="row justify-content-center fs-5 text-center " data-aos="fade-right" data-aos-duration="1000">
+      <div class="row justify-content-center fs-5  " data-aos="fade-right" data-aos-duration="1000">
         <div class="col-md-4 mb-3 mt-4">
-          <p class="fst-italic">Nama saya Erlan Ferdiandi |
+          <ul class="list-unstyled">
+          <li>Nama saya Erlan Ferdiandi</li>
+            <ul>
+              <li>Lahir di bandung tanggal 6 agustus 1992</li>
+              <li>Tinggal di JL Uranium No.5 Buah-Batu Bandung</li>
+              <li>Email erlanferdiandi2@gmail.com </li>
+        </ul>
+          <!-- <p class="fst-italic">Nama saya Erlan Ferdiandi |
              Saya lahir di bandung tanggal 6 agustus 1992 
-            | Saya tinggal di JL uranium no 5 Buah-Batu Bandung | Email Saya erlanferdiandi2@gmail.com </p>
+            | Saya tinggal di JL uranium no 5 Buah-Batu Bandung | Email Saya erlanferdiandi2@gmail.com </p> -->
         </div>
         
         <div class="col-md-4 mb-3 mt-4"  data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
-          <p class="fst-italic">Saya lulusan D3 Manajemen Informatika di STMIK AMIK Bandung | SMK Saya Di SMKN 14 Bandung
-           | SMP saya Di SMPN 42 Bandung | SD saya Di SDN Buahbatu 07 Bandung </p>
+          <ul class="list-unstyled">
+            <li>Saya lulusan D3 Manajemen Informatika di STMIK AMIK Bandung</li>
+              <ul>
+                <li>SMK Saya Di SMKN 14 Bandung</li>
+                <li>SMP saya Di SMPN 42 Bandung</li>
+                <li>SD saya Di SDN Buahbatu 07 Bandung</li>
+          </ul>
+          <!-- <p class="fst-italic">Saya lulusan D3 Manajemen Informatika di STMIK AMIK Bandung | SMK Saya Di SMKN 14 Bandung
+           | SMP saya Di SMPN 42 Bandung | SD saya Di SDN Buahbatu 07 Bandung </p> -->
         </div>
       </div>
     </div>
@@ -77,7 +125,7 @@
       <div class="countainer p-5">
         <div class="row text-center ">
           <div class="col mt-3 mb-4 ">
-            <h2>My Portofolio</h2>
+            <h2>Portofolio Saya</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -138,7 +186,7 @@
       <div class="container p-5" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>Contact Me</h2>
+            <h2>Kontak Saya</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -177,7 +225,7 @@
     <!-- footer -->
     <footer class="bg-primary text-white text-center p-3">
       <p>
-        creater with love by Erland Ferdiandi</a>
+        Creater Erlan Ferdiandi || Bootstrap </a>
       </p>
     </footer>
     <!-- akhir footer -->
