edit tentang saya

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
           <ul class="list-unstyled">
             <li>Saya lulusan D3 Manajemen Informatika di STMIK AMIK Bandung</li>
               <ul>
-                <li>SMK Saya Di SMKN 14 Bandung</li>
-                <li>SMP saya Di SMPN 42 Bandung</li>
-                <li>SD saya Di SDN Buahbatu 07 Bandung</li>
+                <li>SMKN 14 Bandung</li>
+                <li>SMPN 42 Bandung</li>
+                <li>SDN Buahbatu 07 Bandung</li>
           </ul>
           <!-- <p class="fst-italic">Saya lulusan D3 Manajemen Informatika di STMIK AMIK Bandung | SMK Saya Di SMKN 14 Bandung
            | SMP saya Di SMPN 42 Bandung | SD saya Di SDN Buahbatu 07 Bandung </p> -->
