--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body id="home">
 
     <!-- navbar2 -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top fw-bold">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top fw-bold" id="nava">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -183,13 +183,13 @@
     <!-- akhir project -->
     <!-- contact -->
     <section id="contact">
-      <div class="container p-5" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
+      <div class="container p-5">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>Kontak Saya</h2>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
           <div class="col-md-6">
             <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
               <strong>Hatur Nuhun!</strong> Pesan sudah kami terima.
