edit kontak saya

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <input name="email" type="email" class="form-control" id="email" aria-describedby="email">
               </div>
               <div class="mb-3">
-                <label for="pesan" class="form-label">Example textarea</label>
+                <label for="pesan" class="form-label">Pesan</label>
                 <textarea name="pesan" class="form-control" id="pesan" rows="3"></textarea>
               </div>
               <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
